--- a/package.json
+++ b/package.json
@@ -2,5 +2,17 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.6",
     "tailwindcss": "^4.0.6"
-  }
+  },
+  "name": "09_plong_rotha_pp_web_mini_project001",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "dev": "npx @tailwindcss/cli -i ./src/style/input.css -o ./src/style/output.css --watch",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
